添加自动化pk活动代码

--- a/app/views/mms/calendar_advs/edit.html.erb
+++ b/app/views/mms/calendar_advs/edit.html.erb
@@ -1,7 +1,75 @@
 <h1>修改广告</h1>
 
 <%= form_tag({:action => 'update', :id => @calendar_advs}, {:multipart=>true}) do %>
-  <%= render :partial => 'form' %>
+  <%= error_messages_for 'calendar_advs' %>
+
+  <table class="ft" border="1">
+    <!--[form:calendar_advs]-->
+    <tr>
+      <td>名称</td>
+      <td><%= text_field 'calendar_advs', 'name'  %></td>
+    </tr>
+
+    <tr>
+      <td>Logo</td>
+      <td>
+        <%=upload_column_field :calendar_advs, :logo %>
+      </td>
+    </tr>
+
+    <tr>
+      <td>类别</td>
+      <td>
+        <%= select "calendar_advs", 'tp', [['应用内弹出',2], ['新弹出', 1], ['执行代码', 3], ['网页', 4], ] %>
+      </td>
+    </tr>
+
+    <tr>
+      <td>图片或网页url,点击事件代码</td>
+      <td><%= text_area 'calendar_advs', 'url', {:rows=>5}  %></td>
+    </tr>
+
+    <tr>
+      <td>执行代码</td>
+      <td><%= text_area 'calendar_advs', 'code', {:rows=>5}  %></td>
+    </tr>
+
+    <tr>
+      <td>排序</td>
+      <td><%= text_field 'calendar_advs', 'position'  %></td>
+    </tr>
+
+    <tr>
+      <td>平台</td>
+      <td><%= text_field 'calendar_advs', 'only'  %> (iphone / android / 不填则通用)</td>
+    </tr>
+
+    <tr>
+      <td>客户代码</td>
+      <td><%= text_field 'calendar_advs', 'client'  %></td>
+    </tr>
+
+    <tr>
+      <td>状态</td>
+      <td>
+        <%= select "calendar_advs", 'status', [['上线', 'online'], ['下线', 'offline'], ['测试', 'test']] %>
+      </td>
+    </tr>
+    <% if @calendar_advs.tp == 3 %>
+    <tr>
+      <td>设为pk活动</td>
+      <td>
+        <% if @calendar_advs.pk.present? %>
+          <%= link_to '设置pk参数', edit_mms_calendar_adv_pk_path(@calendar_advs, @calendar_advs.pk) %>
+        <% else %>
+          <%= link_to '设置pk参数', new_mms_calendar_adv_pk_path(@calendar_advs) %>
+        <% end %>
+      </td>
+    </tr>
+    <% end %>
+    <!--[eoform:calendar_advs]-->
+
+  </table>
   <%= submit_tag '保存' %> | <%= link_to '返回', :action => 'list' %>
 <% end %>
 
