--- a/app/views/mms/calendar_advs/_form.html.erb
+++ b/app/views/mms/calendar_advs/_form.html.erb
@@ -52,6 +52,23 @@
 		<%= select "calendar_advs", 'status', [['上线', 'online'], ['下线', 'offline'], ['测试', 'test']] %>
 	</td>
 </tr>
+
+  <tr>
+    <td>采用手动控制上下线的方式</td>
+    <td>
+      <%= check_box "calendar_advs", 'manually' %>
+    </td>
+  </tr>
+
+  <tr>
+    <td>自动上下线日期（手动控制上下线时无效）</td>
+    <td>
+      <%= date_select "calendar_advs", 'start_date',  {use_month_numbers: true} %>
+      至
+      <%= date_select "calendar_advs", 'end_date', {use_month_numbers: true, default: 7.days.from_now} %>
+    </td>
+  </tr>
+
 <!--[eoform:calendar_advs]-->
 
 </table>
