--- a/app/views/mms/users/list_block.html.erb
+++ b/app/views/mms/users/list_block.html.erb
@@ -25,7 +25,7 @@
                     <td><%= block.user.last_login_at.to_s(:db) if block.user.last_login_at%></td>
                     <td><%= block.user.created_at.to_s(:db) %></td>
                     <td><%= block.created_at.to_s(:db) %></td>
-                    <td><%= link_to "移除", :action=>"remove_block", :id=>block.id, :tp=>params[:tp]%></td>
+                    <td><%= link_to "移除", :action=>"remove_block", :id=>block.id, :tp=>params[:tp], :page=>params[:page] %></td>
                 </tr>
                 <% end %>
             </tbody>
