--- a/app/views/mobile/children_day.html.erb
+++ b/app/views/mobile/children_day.html.erb
@@ -67,8 +67,6 @@
   </div>
 </div>
 
-
-
 <div id="head">
   <div id='logo'>
     <img src='/images/advs/mobile/logo.png'/>
@@ -85,3 +83,15 @@
   </div>
   <div class="clear"></div>
 </div>
+<script>
+  window.onload=function() {
+    setTimeout(function() {
+      document.title = "6月16日白天和晚上都能兑换礼物啦！616件礼品免费等你拿!"
+    }, 500)
+  }
+</script>
+
+<% content_for :head_image do %>
+  <img src="/images/616/big_log.jpg" alt="" style="height: 0; width: 0; overflow: hidden;"/>
+<% end %>
+
