--- a/app/views/mobile/post.html.erb
+++ b/app/views/mobile/post.html.erb
@@ -157,3 +157,15 @@
 			</div>
 			<div class="clear"></div>
 </div>
+
+<script>
+  window.onload=function() {
+    setTimeout(function() {
+      document.title = "<%= @post.content %>"
+    }, 500)
+  }
+</script>
+
+<% content_for :head_image do %>
+  <img src="http://mamashai-videos.img-cn-qingdao.aliyuncs.com/<%= @post.user.logo.url %>@!thumb410" alt="" style="height: 0; width: 0; overflow: hidden;"/>
+<% end %>
